@@ -4,6 +4,11 @@
 
 2006-02-07 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/scim_canna_imengine_setup.cpp: Add version information.
+	* po/ja.po: Update.
+
+2006-02-07 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/scim_canna_imengine_setup.cpp: Fix typo. Remove needless code.
 
 2006-02-07 Takuro Ashie <ashie@homa.ne.jp>
